# SimpleSerial

./: .gitignore  CMakeLists.txt  main.cpp
simpleserial/: frontend.hpp
simpleserial/backend/: libxml2_backend.hpp  ptree_backend.hpp  pugi_backend.hpp
test/: domain_dtos.hpp  tester.hpp
